objects/Project_Score_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The initial project score</description>
        <inlineHelpText>Enter the initial project score</inlineHelpText>
        <label>Score</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Score__c</fullName>
        <label>Weighted Score</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Project Score Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Score Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Score Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>